--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
-    "@angular/fire": "^7.2.1",
+    "@angular/fire": "^7.3.0",
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.1.0",
     "@angular/material": "^13.2.3",
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@emailjs/browser": "^3.5.0",
+    "@firebase/firestore": "^3.4.7",
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.11.4",
     "angular-calendar": "^0.29.0",
@@ -32,7 +33,8 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "emailjs": "^3.8.0",
-    "firebase": "^9.6.8",
+    "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
     "flatpickr": "^4.6.11",
     "ng-apexcharts": "^1.7.0",
     "rxfire": "^6.0.0",
